# wolfinfo

./: .dockerignore  .gitignore  .hintrc  README.md  docker-compose.yml  index.html  newindex.html  package-lock.json  package.json  pyproject.toml  robots.txt  sitemap.xml  yandex_9f4c2db5e46bb800.html
.well-known/discord/: index.html
backend/: Dockerfile
backend/api/: alembic.ini  prestart.sh  pyproject.toml  run.sh
backend/api/alembic/: env.py
backend/api/alembic/versions/: 57106e306611_update_table_user.py  72a07a05034b_create_table_image.py  b7ab714cdf1c_update_table_role.py  bc1ce7ca9b74_create_tables_user_role.py
backend/api/src/: database.py  initial_data.py  main.py
backend/api/src/libs/: config.py  custom_exceptions.py
backend/api/src/req/auth/: base_config.py  manager.py  models.py  schemas.py  utils.py
backend/api/src/req/images/: controller.py  models.py  router.py
backend/api/src/req/main_inf/: router.py
css/: index.css  mycss.css  newindex.css  sshmgr.css
djangodemo/djangodemo/: settings.py
peoples/badwolf/: index.html
peoples/lkotum/: index.html
public/: index.html
src/: App.css  index.css  index.js
src/assets/style/: button.css  circle.css  footer.css  header.css  index.css  maintitle.css
src/components/form/: header.jsx  projects.jsx  team.jsx
src/components/ui/: button.jsx
src/layouts/: header.js
src/lib/: api.js
src/pages/: Home.jsx
sshmgr/: index.html
sshmgr/en/: index.html
sshmgr/ru/: index.html
